# tessera

./: .gitattributes  Cargo.toml  LICENSE  README.md  improvement.md
scripts/: benchmark.sh
src/: error.rs  lib.rs  main.rs  tiles.rs  utils.rs
src/geometry/: compare.rs  delta.rs  kdtree.rs  mod.rs  prepared.rs
src/maths/: bounding_box.rs  line.rs  matrix.rs  mod.rs  point.rs  sphere.rs  triangle.rs  vec.rs
src/tile/: b3dm.rs  gltf.rs  mod.rs  pnts.rs
src/tileset/: compare.rs  loader.rs  mod.rs  traverse.rs  writer.rs
