[package]
name = "tessera"
version = "0.1.0"
edition = "2024"
authors = ["Sensat <contact@sensat.com>"]
description = "A command line interface for calculating geometric error for 3D Tiles tilesets"
license = "MIT"
repository = "https://github.com/sensat/tessera"
keywords = ["cli", "3d-tiles", "geometric-error", "geometric-error-estimation"]
categories = ["command-line-utilities"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (for config files, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# GLTF/GLB loader
gltf = { version = "1.4", features = ["import"] }
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.8"
